--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,8 @@
-/*# sourceMappingURL=style.css.map */
+h1 {
+  max-width: 90px;
+  min-height: 36px;
+  font-size: 24px;
+  line-height: 36px;
+  letter-spacing: -0.25px;
+  text-align: left;
+}/*# sourceMappingURL=style.css.map */
