--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,9 @@
 h1 {
   max-width: 90px;
   min-height: 36px;
+  padding-top: 20px;
+  position: relative;
+  left: 100px;
   font-size: 24px;
   line-height: 36px;
   letter-spacing: -0.25px;
@@ -13,8 +16,15 @@ h1 {
   justify-content: center;
 }
 
+.navlist li {
+  padding-right: 50px;
+}
+
 img {
   float: right;
+  position: relative;
+  bottom: 100px;
+  right: 100px;
 }
 
 h2 {
@@ -22,4 +32,22 @@ h2 {
   font-weight: 500;
   line-height: 102px;
   letter-spacing: -2px;
+}
+
+p {
+  max-width: 410px;
+  min-height: 98px;
+  font-size: 22px;
+}
+
+.recipe-content {
+  position: relative;
+  top: 100px;
+  left: 100px;
+}
+
+.container {
+  max-width: 1440px;
+  width: 100%;
+  min-height: 810px;
 }/*# sourceMappingURL=style.css.map */
