--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -1,6 +1,9 @@
 h1 {
   max-width: 90px;
   min-height: 36px;
+  padding-top: 20px;
+  position: relative;
+  left: 100px;
   font-size: 24px;
   line-height: 36px;
   letter-spacing: -0.25px;
@@ -11,4 +14,8 @@ h1 {
   list-style: none;
   display: flex;
   justify-content: center;
+}
+
+.navlist li {
+  padding-right: 50px;
 }
