added fonts to website

--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -6,6 +6,7 @@ img {
 }
 
 h2 {
+  font-family: "poppins", sans-serif;
   font-size: 90px;
   font-weight: 500;
   line-height: 102px;
@@ -15,6 +16,7 @@ h2 {
 p {
   max-width: 410px;
   min-height: 98px;
+  font-family: "source sans 3", sans-serif;
   font-size: 22px;
 }
 
