--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -14,6 +14,7 @@ h1 {
   list-style: none;
   display: flex;
   justify-content: center;
+  font-family: "source sans 3", sans-serif;
 }
 
 .navlist li {
