--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,7 @@ h1 {
   list-style: none;
   display: flex;
   justify-content: center;
+  font-family: "source sans 3", sans-serif;
 }
 
 .navlist li {
@@ -28,6 +29,7 @@ img {
 }
 
 h2 {
+  font-family: "poppins", sans-serif;
   font-size: 90px;
   font-weight: 500;
   line-height: 102px;
@@ -37,6 +39,7 @@ h2 {
 p {
   max-width: 410px;
   min-height: 98px;
+  font-family: "source sans 3", sans-serif;
   font-size: 22px;
 }
 
