added padding to h2

--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -2,10 +2,10 @@ img {
   float: right;
   position: relative;
   bottom: 100px;
-  right: 100px;
 }
 
 h2 {
+  padding-bottom: 50px;
   font-family: "poppins", sans-serif;
   font-size: 90px;
   font-weight: 500;
