--- a/styles/style.css
+++ b/styles/style.css
@@ -25,10 +25,10 @@ img {
   float: right;
   position: relative;
   bottom: 100px;
-  right: 100px;
 }
 
 h2 {
+  padding-bottom: 50px;
   font-family: "poppins", sans-serif;
   font-size: 90px;
   font-weight: 500;
@@ -53,4 +53,7 @@ p {
   max-width: 1440px;
   width: 100%;
   min-height: 810px;
+  /*display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  grid-template-rows: repeat(10, 1fr);*/
 }/*# sourceMappingURL=style.css.map */
