--- a/styles/style.scss
+++ b/styles/style.scss
@@ -5,4 +5,7 @@
   max-width: 1440px;
   width: 100%;
   min-height: 810px;
+  /*display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  grid-template-rows: repeat(10, 1fr);*/
 }
