--- a/styles/style.css
+++ b/styles/style.css
@@ -23,6 +23,11 @@ h1 {
 
 img {
   float: right;
+  width: 50%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  float: right;
   position: relative;
   bottom: 100px;
 }
@@ -44,6 +49,10 @@ p {
 }
 
 .recipe-content {
+  max-width: 416px;
+  width: 100px;
+  min-height: 246px;
+  width: 100%;
   position: relative;
   top: 100px;
   left: 100px;
