added media queries & images for mobile & desktop

--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -22,6 +22,7 @@ p {
   min-height: 98px;
   font-family: "source sans 3", sans-serif;
   font-size: 22px;
+  line-height: 33px;
 }
 
 .recipe-content {
