--- a/styles/style.scss
+++ b/styles/style.scss
@@ -9,3 +9,56 @@
   grid-template-columns: repeat(10, 1fr);
   grid-template-rows: repeat(10, 1fr);*/
 }
+
+@media screen and (max-width: 768px) /* desktop first*/ {
+  .navlist ul {
+    list-style: none;
+    display: flex;
+    justify-content: flex-end;
+    font-family: "source sans 3", sans-serif;
+  }
+
+  h2 {
+    font-size: 72px;
+    line-height: 82.8px;
+    letter-spacing: -1.6px;
+  }
+
+  .recipe-content {
+    margin: 0 auto;
+  }
+
+  img {
+    height: 100vh;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    left: 0;
+    top: 100px;
+    bottom: 0;
+    object-fit: cover;
+  }
+}
+
+@media screen and (max-width: 320px) /*mobile first*/ {
+  h2 {
+    font-size: 36px;
+    line-height: 39.6px;
+    letter-spacing: -0.8px;
+  }
+
+  .recipe-content {
+    margin: 0 auto;
+  }
+
+  img {
+    height: 100vh;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    left: 0;
+    top: 100px;
+    bottom: 0;
+    object-fit: cover;
+  }
+}
