--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -20,7 +20,7 @@ h2 {
 p {
   max-width: 410px;
   min-height: 98px;
-  font-family: "source sans 3", sans-serif;
+  font-family: $font-fam, sans-serif;
   font-size: 22px;
   line-height: 33px;
 }
