--- a/styles/style.scss
+++ b/styles/style.scss
@@ -15,7 +15,7 @@
     list-style: none;
     display: flex;
     justify-content: flex-end;
-    font-family: "source sans 3", sans-serif;
+    font-family: $font-fam, sans-serif;
   }
 
   h2 {
